# z

./: CHANGELOG.md  Cargo.toml  readme  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
docs/superpowers/plans/: 2026-04-28-monochrome-palette.md  2026-04-28-tui-style-system.md  2026-05-04-scm-mr-inbox.md  2026-05-05-agentic-glab-mr.md  2026-05-05-gitlab-new-task-wizard.md  2026-05-07-wizard-layout-redesign.md  2026-05-20-automated-github-releases.md
docs/superpowers/specs/: 2026-04-28-monochrome-palette-design.md  2026-05-04-scm-mr-inbox-design.md  2026-05-05-agentic-glab-mr-design.md  2026-05-05-gitlab-new-task-wizard-design.md  2026-05-07-wizard-layout-redesign-design.md
src/: agent.rs  agent_table.rs  app.rs  config.rs  gitlab.rs  main.rs  new_agent_panel.rs  notifications.rs  panel.rs  picker.rs  scm.rs  style.rs  table.rs  ui.rs  wizard.rs
