[package]
name = "z"
version = "0.2.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "sync", "fs"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
dirs = "6"
tokio-util = "0.7"
notify-rust = "4"
