[package]
name = "z"
version = "0.2.4"
edition = "2024"
rust-version = "1.88"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm_0_29", "layout-cache"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "sync", "fs", "io-util"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["preserve_order"] }
dirs = "6"
tokio-util = "0.7"
notify-rust = "4"
